--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^1.19.1",
+    "pug": "^3.0.0",
+    "pug-plain-loader": "^1.1.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
